--- a/Blog.Service/Blog.Service.csproj
+++ b/Blog.Service/Blog.Service.csproj
@@ -10,6 +10,7 @@
   
   <ItemGroup>
     <PackageReference Include="MailKit" Version="4.9.0" />
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
   </ItemGroup>
   
 
